--- a/playlistFeature/build.gradle
+++ b/playlistFeature/build.gradle
@@ -31,11 +31,11 @@ android {
     }
     buildFeatures {
         viewBinding = true
-        compose true
+       // compose true
     }
-    composeOptions {
+   /* composeOptions {
         kotlinCompilerExtensionVersion '1.5.3'
-    }
+    }*/
 
     namespace 'com.yes.playlistfeature'
 }
@@ -81,7 +81,7 @@ dependencies {
     androidTestImplementation libs.androidx.datastore.preferences.core
     androidTestImplementation libs.androidx.preference.ktx
     //Compose
-    def composeBom = platform("androidx.compose:compose-bom:2023.10.01")
+  /*  def composeBom = platform("androidx.compose:compose-bom:2023.10.01")
     implementation(composeBom)
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.ui
@@ -90,5 +90,5 @@ dependencies {
     implementation libs.androidx.material
     implementation libs.androidx.ui.tooling
     implementation libs.androidx.lifecycle.viewmodel.compose
-    implementation libs.androidx.material3
+    implementation libs.androidx.material3*/
 }
