--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':trackdialogFeature'
 include ':core'
 include ':shared-test'
 include ':playListDialogFeature'
+include ':alarmClockFeature'
