--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" android:maxSdkVersion="34" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
     <application
         android:requestLegacyExternalStorage="true"
         android:name=".YESApplication"
@@ -48,7 +49,13 @@
         </service>
         <receiver
             android:name="com.yes.alarmclockfeature.presentation.ui.YESBroadcastReceiver"
+
+            android:enabled="true"
             android:exported="true">
+            <intent-filter>
+                <action android:name="alarm" />
+
+            </intent-filter>
         </receiver>
     </application>
 
