--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include ':core'
 include ':shared-test'
 include ':playListDialogFeature'
 include ':alarmClockFeature'
+include ':equalizerFeature'
