--- a/core/build.gradle
+++ b/core/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':coreUI')
     // androidTestImplementation 'androidx.multidex:multidex:2.0.1'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
