bug: equalizer fixiing 21.02.2023

--- a/equalizerFeature/build.gradle
+++ b/equalizerFeature/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation libs.core.ktx
     implementation libs.appcompat
     implementation libs.material
+    implementation libs.androidx.media3.common
     testImplementation libs.junit
     androidTestImplementation libs.androidx.test.ext.junit
     androidTestImplementation libs.espresso.core
@@ -60,5 +61,9 @@ dependencies {
     implementation libs.androidx.datastore.preferences
     androidTestImplementation libs.androidx.datastore.preferences.core
     androidTestImplementation libs.androidx.preference.ktx
-
+//  implementation libs.media3//tmp
+    implementation libs.androidx.media3.session
+    implementation libs.androidx.media3.exoplayer
+    implementation libs.androidx.media3.exoplayer.dash
+    implementation libs.androidx.media3.ui
 }
