bug fix: cpu overloading due to ondraw heavy operations 01.03.2023

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
+        android:hardwareAccelerated="true"
         android:requestLegacyExternalStorage="true"
         android:name=".YESApplication"
         android:allowBackup="true"
