developing: Alarm MapperUI 12.03.2023

--- a/equalizerFeature/build.gradle
+++ b/equalizerFeature/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     implementation libs.androidx.media3.exoplayer
     implementation libs.androidx.media3.exoplayer.dash
     implementation libs.androidx.media3.ui
+    //testJunit5
+    testImplementation libs.junit.jupiter
+    testRuntimeOnly libs.junit.jupiter
 }
