--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,10 +39,9 @@ dependencies {
     implementation project(path: ':coreUI')
     // androidTestImplementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation libs.core.ktx
+    implementation libs.appcompat
+    implementation libs.material
     //viewModel
     implementation libs.androidx.lifecycle.runtime.ktx
     implementation libs.androidx.lifecycle.viewmodel.ktx
