--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id 'com.android.library'
-   // alias(libs.plugins.androidLibrary)
-   // id 'com.android.application'
-  //  alias(libs.plugins.androidLibrary)
+    // alias(libs.plugins.androidLibrary)
+    // id 'com.android.application'
+    //  alias(libs.plugins.androidLibrary)
     id 'org.jetbrains.kotlin.android'
-  //  alias(libs.plugins.kotlinAndroid)
-   // id 'kotlin-kapt'
+    //  alias(libs.plugins.kotlinAndroid)
+    // id 'kotlin-kapt'
     alias(libs.plugins.kotlinKapt)
     alias(libs.plugins.devtoolsKsp)
-   // id 'kotlin-android'
+    // id 'kotlin-android'
 //id "com.google.devtools.ksp"
 }
 /*plugins {
@@ -21,7 +21,7 @@ android {
     compileSdk 33
     packagingOptions {
         resources {
-            excludes += ['MenuRepositoryImplOLDTest.kt', 'META-INF/LICENSE-notice.md', 'META-INF/LICENSE.md','MANIFEST.MF','META-INF/com.google.dagger_dagger.version']
+            excludes += ['MenuRepositoryImplOLDTest.kt', 'META-INF/LICENSE-notice.md', 'META-INF/LICENSE.md', 'MANIFEST.MF', 'META-INF/com.google.dagger_dagger.version']
         }
     }
     /* testOptions {
@@ -61,9 +61,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-  /*  kotlin {
-        jvmToolchain(11)
-    }*/
+    /*  kotlin {
+          jvmToolchain(11)
+      }*/
     kotlinOptions {
         jvmTarget = '11'
     }
@@ -71,9 +71,9 @@ android {
         viewBinding = true
     }
     namespace 'com.yes.trackdialogfeature'
-   /* installation {
-        timeOutInMs 30000
-    }*/
+    /* installation {
+         timeOutInMs 30000
+     }*/
     sourceSets {
         androidTest {
             manifest.srcFile 'src/androidTest/AndroidManifest.xml'
@@ -86,16 +86,16 @@ dependencies {
     implementation project(path: ':core')
     implementation project(path: ':coreUI')
 
-    testImplementation project(path: ':shared-test')
-    androidTestImplementation project(path: ':shared-test')
+    //  testImplementation project(path: ':shared-test')
+    //  androidTestImplementation project(path: ':shared-test')
     //room
     implementation libs.androidx.room.runtime
     kapt libs.androidx.room.compiler
 
-   /// kaptAndroidTest libs.androidx.room.testing
+    /// kaptAndroidTest libs.androidx.room.testing
 
     // To use Kotlin annotation processing tool (kapt)
-   /* kapt "androidx.room:room-compiler:$room_version"*/
+    /* kapt "androidx.room:room-compiler:$room_version"*/
 
     //////////////
 
@@ -104,12 +104,13 @@ dependencies {
     // androidTestImplementation project(path: ':app')
 
     //  implementation 'androidx.core:core-ktx:1.9.0'
-    implementation "com.google.android.material:material:1.8.0"
+    implementation libs.material
+
 
     //viewModel
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-
+    implementation libs.androidx.lifecycle.runtime.ktx
+    implementation libs.androidx.lifecycle.viewmodel.ktx
+    implementation libs.androidx.fragment.ktx
 
 
     //Dagger/////////////////////
@@ -131,8 +132,8 @@ dependencies {
     testImplementation libs.junit.jupiter
     testRuntimeOnly libs.junit.jupiter
     //junit5 seems to not worked on android
-   /* androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
-    androidTestRuntimeOnly 'org.junit.jupiter:junit-jupiter:5.9.3'*/
+    /* androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+     androidTestRuntimeOnly 'org.junit.jupiter:junit-jupiter:5.9.3'*/
 
     ////////////
     //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
@@ -140,12 +141,15 @@ dependencies {
     //DO NOT TOUCH - GOOGLE BUG HERE!!!
     /*debugImplementation("androidx.fragment:fragment-testing-manifest:1.6.0-alpha04")
     androidTestImplementation("androidx.fragment:fragment-testing:1.6.0-alpha04")*/
-   /* debugImplementation("androidx.fragment:fragment-testing-manifest:1.6.0")
-    androidTestImplementation("androidx.fragment:fragment-testing:1.6.0")*/
+    /* debugImplementation("androidx.fragment:fragment-testing-manifest:1.6.0")
+     androidTestImplementation("androidx.fragment:fragment-testing:1.6.0")*/
     /////////////////////////////////////////////////////////////////
-    debugImplementation "androidx.fragment:fragment-testing:1.6.1"
-    implementation "androidx.fragment:fragment-ktx:1.6.1"
-   // debugImplementation "androidx.fragment:fragment-testing:1.5.7"
+    //fragment
+    debugImplementation libs.androidx.fragment.testing
+    implementation libs.androidx.fragment.ktx
+   // debugImplementation "androidx.fragment:fragment-testing:1.6.1"
+   // implementation "androidx.fragment:fragment-ktx:1.6.1"
+    // debugImplementation "androidx.fragment:fragment-testing:1.5.7"
     //implementation "androidx.fragment:fragment-ktx:1.5.7"
     //////////////////////////////////////
     ///////////////////////////////////
@@ -153,11 +157,11 @@ dependencies {
     ///////////////////////////
     // Mock objects
     //DO NOT TOUCH - last version conflicts with espresso!
-   // testImplementation libs.mockk
-   /* def mockkVersion = "1.12.2"
-    testImplementation "io.mockk:mockk:$mockkVersion"*/
-   testImplementation libs.mockk
- // androidTestImplementation libs.mockk.android - conflicts wit espresso!!!!
+    // testImplementation libs.mockk
+    /* def mockkVersion = "1.12.2"
+     testImplementation "io.mockk:mockk:$mockkVersion"*/
+    testImplementation libs.mockk
+    // androidTestImplementation libs.mockk.android - conflicts wit espresso!!!!
     //shit here!!!!!
     //androidTestImplementation "io.mockk:mockk-android:$mockkVersion"
     // testImplementation "io.mockk:mockk-android:${mockkVersion}"
@@ -167,15 +171,15 @@ dependencies {
     ////////////////////////
     //turbine
     testImplementation libs.turbine
-  //  androidTestImplementation libs.turbine
+    //  androidTestImplementation libs.turbine
     // Run Blocking Test
     def coreTestingVersion = "1.1.1"
     //Coroutines
     testImplementation libs.kotlinx.coroutines.test
     androidTestImplementation libs.kotlinx.coroutines.test
     //Espresso
-  /*  androidTestImplementation libs.hamcrest
-    androidTestImplementation 'org.hamcrest:hamcrest-library:2.2'*/
+    /*  androidTestImplementation libs.hamcrest
+      androidTestImplementation 'org.hamcrest:hamcrest-library:2.2'*/
     androidTestImplementation libs.androidx.espresso.contrib
     androidTestImplementation libs.espresso.core
     implementation libs.espresso.idling.resource
@@ -183,18 +187,18 @@ dependencies {
     androidTestImplementation libs.androidx.rules
     //androidTestImplementation (libs.hamcrest.library)
 
-   // testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
-   // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    // testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     /* def fragment_version = "1.5.6"
      debugImplementation "androidx.fragment:fragment-testing:$fragment_version"*/
 
     //tmp
-  //  debugImplementation "androidx.test:monitor:1.6.0"
+    //  debugImplementation "androidx.test:monitor:1.6.0"
 //Shit for mockk to run on api<p
     implementation 'com.github.tmurakami:dexopener:2.0.5'
 
-  //  implementation 'androidx.core:core-ktx:1.3.2'
-  //  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //  implementation 'androidx.core:core-ktx:1.3.2'
+    //  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     //Preferences DataStore
     implementation libs.androidx.datastore.preferences
     androidTestImplementation libs.androidx.datastore.preferences.core
