--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':shared-test'
 include ':playListDialogFeature'
 include ':alarmClockFeature'
 include ':equalizerFeature'
+include ':musicServiceFeature'
