--- a/playlistFeature/build.gradle
+++ b/playlistFeature/build.gradle
@@ -91,4 +91,8 @@ dependencies {
     implementation libs.androidx.ui.tooling
     implementation libs.androidx.lifecycle.viewmodel.compose
     implementation libs.androidx.material3*/
+
+    //kotlin coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
 }
