--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':playListDialogFeature'
 include ':alarmClockFeature'
 include ':equalizerFeature'
 include ':musicServiceFeature'
+include ':settingsFeature'
