--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -14,7 +14,20 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
     }
+    packaging {
+        resources {
+            it.excludes += ['EqualizerView.kt']
+
+        }
+    }
+   /* packagingOptions {
+        resources {
+            excludes += ['EqualizerView.kt']
+        }
+    }*/
+
 
     buildTypes {
         release {
@@ -27,9 +40,9 @@ android {
         viewBinding = true
         compose true
     }
-    composeOptions {
+  /*  composeOptions {
         kotlinCompilerExtensionVersion '1.5.3'
-    }
+    }*/
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
@@ -87,7 +100,7 @@ dependencies {
     //Compose
     // Android Studio Preview support
 
-    def composeBom = platform("androidx.compose:compose-bom:2023.10.01")
+   /* def composeBom = platform("androidx.compose:compose-bom:2023.10.01")
     implementation(composeBom)
 
     implementation libs.androidx.ui.tooling.preview
@@ -95,5 +108,5 @@ dependencies {
     implementation libs.androidx.runtime
     implementation libs.androidx.foundation
     implementation libs.androidx.material
-    implementation libs.androidx.ui.tooling
+    implementation libs.androidx.ui.tooling*/
 }
