--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -14,10 +14,17 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-
+        ndkVersion = "25.2.9519653"
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64', 'x86'
+        }
     }
 
-
+    sourceSets {
+        main {
+            assets.srcDirs += "$buildDir/generated/assets"
+        }
+    }
 
 
     buildTypes {
@@ -45,8 +52,9 @@ dependencies {
     implementation project(path: ':coreUI')
     implementation project(path: ':core')
 
-    
-
+//vosk
+    implementation 'net.java.dev.jna:jna:5.13.0@aar'
+    implementation 'com.alphacephei:vosk-android:0.3.47@aar'
   //  implementation libs.media3//tmp
     implementation libs.androidx.media3.session
     implementation libs.androidx.media3.exoplayer
@@ -87,3 +95,14 @@ dependencies {
     androidTestImplementation libs.androidx.rules
 
 }
+tasks.register('genUUID') {
+    def uuid = UUID.randomUUID().toString()
+    def odir = file("$buildDir/generated/assets/model")
+    def ofile = file("$odir/uuid")
+    doLast {
+        mkdir odir
+        ofile.text = uuid
+    }
+}
+
+preBuild.dependsOn(genUUID)
