--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ compiler = "3.2.0-alpha11"
 annotationJvm = "1.7.1"
 media3Common = "1.2.1"
 appUpdateKtx = "2.1.0"
+androidx-media3Common = "1.3.1"
 
 [libraries]
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
@@ -86,6 +87,7 @@ androidx-compiler = { group = "androidx.databinding", name = "compiler", version
 androidx-annotation-jvm = { group = "androidx.annotation", name = "annotation-jvm", version.ref = "annotationJvm" }
 androidx-media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3Common" }
 app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "appUpdateKtx" }
+media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "androidx-media3Common" }
 
 [plugins]
 androidLibrary = { id = 'com.android.library', version.ref = "androidGradlePlugin" }
