--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':alarmClockFeature'
 include ':equalizerFeature'
 include ':musicServiceFeature'
 include ':settingsFeature'
+include ':speechManagerFeature'
