--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        minSdk 21//19
+        minSdk 19
         targetSdk 33
         // multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
