--- a/coreUI/build.gradle
+++ b/coreUI/build.gradle
@@ -7,9 +7,9 @@ android {
     compileSdk 33
 
     defaultConfig {
-        minSdk 21
+        minSdk 19
         targetSdk 33
-        // multiDexEnabled true
+         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -37,7 +37,7 @@ android {
 }
 
 dependencies {
-    // androidTestImplementation 'androidx.multidex:multidex:2.0.1'
+     androidTestImplementation 'androidx.multidex:multidex:2.0.1'
 
     implementation libs.material
     implementation libs.androidx.annotation.jvm
