bug:api20 bugs attribs not avaible in drawable 29.05.2023

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled = true
+
+        multiDexKeepProguard file("multidex-config.pro")
     }
 
     buildTypes {
