--- a/playlistFeature/build.gradle
+++ b/playlistFeature/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation libs.core.ktx
     implementation libs.appcompat
     implementation libs.material
+    //multidex
+    implementation 'androidx.multidex:multidex:2.0.1'
     //Dagger/////////////////////
     implementation libs.dagger
 
