--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:name=".YESApplication"
         android:allowBackup="true"
         android:icon="@mipmap/launcher"
-        android:label="@string/app_name"
+        android:label="@string/label"
         android:roundIcon="@mipmap/launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicPlayer"
